--- a/jupyter_notebooks/topic03_decision_trees_knn/lesson3_practice_trees_titanic.ipynb
+++ b/jupyter_notebooks/topic03_decision_trees_knn/lesson3_practice_trees_titanic.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -331,12 +331,12 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Stead, Mr. William Thomas</td>\n",
+       "      <td>Leonard, Mr. Lionel</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>347082</td>\n",
+       "      <td>CA. 2343</td>\n",
        "      <td>NaN</td>\n",
        "      <td>B96 B98</td>\n",
        "      <td>S</td>\n",
@@ -466,31 +466,31 @@
        "</div>"
       ],
       "text/plain": [
-       "        PassengerId    Survived      Pclass                       Name   Sex  \\\n",
-       "count    891.000000  891.000000  891.000000                        891   891   \n",
-       "unique          NaN         NaN         NaN                        891     2   \n",
-       "top             NaN         NaN         NaN  Stead, Mr. William Thomas  male   \n",
-       "freq            NaN         NaN         NaN                          1   577   \n",
-       "mean     446.000000    0.383838    2.308642                        NaN   NaN   \n",
-       "std      257.353842    0.486592    0.836071                        NaN   NaN   \n",
-       "min        1.000000    0.000000    1.000000                        NaN   NaN   \n",
-       "25%      223.500000    0.000000    2.000000                        NaN   NaN   \n",
-       "50%      446.000000    0.000000    3.000000                        NaN   NaN   \n",
-       "75%      668.500000    1.000000    3.000000                        NaN   NaN   \n",
-       "max      891.000000    1.000000    3.000000                        NaN   NaN   \n",
+       "        PassengerId    Survived      Pclass                 Name   Sex  \\\n",
+       "count    891.000000  891.000000  891.000000                  891   891   \n",
+       "unique          NaN         NaN         NaN                  891     2   \n",
+       "top             NaN         NaN         NaN  Leonard, Mr. Lionel  male   \n",
+       "freq            NaN         NaN         NaN                    1   577   \n",
+       "mean     446.000000    0.383838    2.308642                  NaN   NaN   \n",
+       "std      257.353842    0.486592    0.836071                  NaN   NaN   \n",
+       "min        1.000000    0.000000    1.000000                  NaN   NaN   \n",
+       "25%      223.500000    0.000000    2.000000                  NaN   NaN   \n",
+       "50%      446.000000    0.000000    3.000000                  NaN   NaN   \n",
+       "75%      668.500000    1.000000    3.000000                  NaN   NaN   \n",
+       "max      891.000000    1.000000    3.000000                  NaN   NaN   \n",
        "\n",
-       "               Age       SibSp       Parch  Ticket        Fare    Cabin  \\\n",
-       "count   714.000000  891.000000  891.000000     891  891.000000      204   \n",
-       "unique         NaN         NaN         NaN     681         NaN      147   \n",
-       "top            NaN         NaN         NaN  347082         NaN  B96 B98   \n",
-       "freq           NaN         NaN         NaN       7         NaN        4   \n",
-       "mean     29.699118    0.523008    0.381594     NaN   32.204208      NaN   \n",
-       "std      14.526497    1.102743    0.806057     NaN   49.693429      NaN   \n",
-       "min       0.420000    0.000000    0.000000     NaN    0.000000      NaN   \n",
-       "25%      20.125000    0.000000    0.000000     NaN    7.910400      NaN   \n",
-       "50%      28.000000    0.000000    0.000000     NaN   14.454200      NaN   \n",
-       "75%      38.000000    1.000000    0.000000     NaN   31.000000      NaN   \n",
-       "max      80.000000    8.000000    6.000000     NaN  512.329200      NaN   \n",
+       "               Age       SibSp       Parch    Ticket        Fare    Cabin  \\\n",
+       "count   714.000000  891.000000  891.000000       891  891.000000      204   \n",
+       "unique         NaN         NaN         NaN       681         NaN      147   \n",
+       "top            NaN         NaN         NaN  CA. 2343         NaN  B96 B98   \n",
+       "freq           NaN         NaN         NaN         7         NaN        4   \n",
+       "mean     29.699118    0.523008    0.381594       NaN   32.204208      NaN   \n",
+       "std      14.526497    1.102743    0.806057       NaN   49.693429      NaN   \n",
+       "min       0.420000    0.000000    0.000000       NaN    0.000000      NaN   \n",
+       "25%      20.125000    0.000000    0.000000       NaN    7.910400      NaN   \n",
+       "50%      28.000000    0.000000    0.000000       NaN   14.454200      NaN   \n",
+       "75%      38.000000    1.000000    0.000000       NaN   31.000000      NaN   \n",
+       "max      80.000000    8.000000    6.000000       NaN  512.329200      NaN   \n",
        "\n",
        "       Embarked  \n",
        "count       889  \n",
@@ -587,7 +587,7 @@
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>del Carlo, Mrs. Sebastiano (Argenia Genovesi)</td>\n",
+       "      <td>Ford, Mr. Edward Watson</td>\n",
        "      <td>male</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -714,31 +714,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        PassengerId      Pclass  \\\n",
-       "count    418.000000  418.000000   \n",
-       "unique          NaN         NaN   \n",
-       "top             NaN         NaN   \n",
-       "freq            NaN         NaN   \n",
-       "mean    1100.500000    2.265550   \n",
-       "std      120.810458    0.841838   \n",
-       "min      892.000000    1.000000   \n",
-       "25%      996.250000    1.000000   \n",
-       "50%     1100.500000    3.000000   \n",
-       "75%     1204.750000    3.000000   \n",
-       "max     1309.000000    3.000000   \n",
-       "\n",
-       "                                                 Name   Sex         Age  \\\n",
-       "count                                             418   418  332.000000   \n",
-       "unique                                            418     2         NaN   \n",
-       "top     del Carlo, Mrs. Sebastiano (Argenia Genovesi)  male         NaN   \n",
-       "freq                                                1   266         NaN   \n",
-       "mean                                              NaN   NaN   30.272590   \n",
-       "std                                               NaN   NaN   14.181209   \n",
-       "min                                               NaN   NaN    0.170000   \n",
-       "25%                                               NaN   NaN   21.000000   \n",
-       "50%                                               NaN   NaN   27.000000   \n",
-       "75%                                               NaN   NaN   39.000000   \n",
-       "max                                               NaN   NaN   76.000000   \n",
+       "        PassengerId      Pclass                     Name   Sex         Age  \\\n",
+       "count    418.000000  418.000000                      418   418  332.000000   \n",
+       "unique          NaN         NaN                      418     2         NaN   \n",
+       "top             NaN         NaN  Ford, Mr. Edward Watson  male         NaN   \n",
+       "freq            NaN         NaN                        1   266         NaN   \n",
+       "mean    1100.500000    2.265550                      NaN   NaN   30.272590   \n",
+       "std      120.810458    0.841838                      NaN   NaN   14.181209   \n",
+       "min      892.000000    1.000000                      NaN   NaN    0.170000   \n",
+       "25%      996.250000    1.000000                      NaN   NaN   21.000000   \n",
+       "50%     1100.500000    3.000000                      NaN   NaN   27.000000   \n",
+       "75%     1204.750000    3.000000                      NaN   NaN   39.000000   \n",
+       "max     1309.000000    3.000000                      NaN   NaN   76.000000   \n",
        "\n",
        "             SibSp       Parch    Ticket        Fare            Cabin Embarked  \n",
        "count   418.000000  418.000000       418  417.000000               91      418  \n",
@@ -1333,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1333,7 @@
        "            presort=False, random_state=17, splitter='best')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1386,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -1452,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1508,7 @@
        "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1534,7 @@
        "(0.82885906040268453, {'max_depth': 3, 'min_samples_leaf': 3})"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -1569,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -1591,7 +1578,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [596, 418]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-16406b496619>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtree_pred_max\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    170\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    171\u001b[0m     \u001b[1;31m# Compute accuracy for each possible representation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 172\u001b[1;33m     \u001b[0my_type\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    173\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'multilabel'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    174\u001b[0m         \u001b[0mdiffering_labels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcount_nonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0marray\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mindicator\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \"\"\"\n\u001b[1;32m---> 72\u001b[1;33m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[0mtype_true\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype_of_target\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \u001b[0mtype_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype_of_target\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    179\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[1;32m--> 181\u001b[1;33m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[0m\u001b[0;32m    182\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    183\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [596, 418]"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy_score(y_train, tree_pred_max)       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1611,7 @@
        "0.80032212885154053"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,7 +1619,7 @@
    "source": [
     "tree_pred_max.shape, y_holdout.shape\n",
     "\n",
-    "#accuracy_score(y, tree_pred_max)       \n",
+    "#accuracy_score(y_train, tree_pred_max)       \n",
     "\n",
     "#to fix this: \n",
     "# ...\n",
@@ -1619,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1639,7 @@
        "0.8288655462184874"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -1668,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -1679,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1688,7 +1699,7 @@
        "0.67619047619047623"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1726,7 @@
        "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1754,7 @@
        "            weights='uniform'))"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,8 +1765,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "knn_res = knn_grid.predict(test_df)\n",
@@ -1772,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1790,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
